Ejercicios Introduccion a la Programacion/Ejercicio 43 Matriz Irregular/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular
-d
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java
<---- end of javadoc command ---->
Loading source file C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java...
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:5: error: illegal start of expression
        mat[0] = {1,2,3,4};
                 ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:5: error: not a statement
        mat[0] = {1,2,3,4};
                  ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:5: error: ';' expected
        mat[0] = {1,2,3,4};
                   ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:6: error: ']' expected
        mat[1] = {5,6};
            ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:6: error: ';' expected
        mat[1] = {5,6};
             ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:6: error: illegal start of type
        mat[1] = {5,6};
               ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:6: error: <identifier> expected
        mat[1] = {5,6};
                ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:6: error: ';' expected
        mat[1] = {5,6};
                  ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:6: error: illegal start of type
        mat[1] = {5,6};
                   ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:6: error: <identifier> expected
        mat[1] = {5,6};
                    ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:6: error: ';' expected
        mat[1] = {5,6};
                     ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: ']' expected
        mat[2] = {7,8,9,10,11,12};
            ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: ';' expected
        mat[2] = {7,8,9,10,11,12};
             ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: illegal start of type
        mat[2] = {7,8,9,10,11,12};
               ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: <identifier> expected
        mat[2] = {7,8,9,10,11,12};
                ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: ';' expected
        mat[2] = {7,8,9,10,11,12};
                  ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: illegal start of type
        mat[2] = {7,8,9,10,11,12};
                   ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: <identifier> expected
        mat[2] = {7,8,9,10,11,12};
                    ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: <identifier> expected
        mat[2] = {7,8,9,10,11,12};
                      ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: illegal start of type
        mat[2] = {7,8,9,10,11,12};
                       ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: <identifier> expected
        mat[2] = {7,8,9,10,11,12};
                        ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: <identifier> expected
        mat[2] = {7,8,9,10,11,12};
                           ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: illegal start of type
        mat[2] = {7,8,9,10,11,12};
                             ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: <identifier> expected
        mat[2] = {7,8,9,10,11,12};
                              ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:7: error: ';' expected
        mat[2] = {7,8,9,10,11,12};
                                ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:8: error: ']' expected
        mat[3] = {13};
            ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:8: error: ';' expected
        mat[3] = {13};
             ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:8: error: illegal start of type
        mat[3] = {13};
               ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:8: error: <identifier> expected
        mat[3] = {13};
                ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:8: error: ';' expected
        mat[3] = {13};
                  ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:9: error: class, interface, or enum expected
        return mat;
        ^
C:\Users\USUARIO\Documents\EjerciciosJava\Ejercicios Introduccion a la Programacion\Ejercicio 43 Matriz Irregular\Prueba.java:10: error: class, interface, or enum expected
    }
    ^
32 errors
